<?xml version="1.0"?>
<package>
  <name>pose2command</name>
  <version>0.0.1</version>
  <description>The pose2command package</description>
  <maintainer email="boophopi@hanmail.net">juna</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>dynamixel_msgs</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
